# ros2-llm-patrol

./: .gitignore  README.md
docker/: Dockerfile  README.md  apt-packages.txt  docker-compose.yaml  requirements.txt  setup_and_run.sh
ros2_ws/src/llm_agent/: package.xml  setup.cfg  setup.py
ros2_ws/src/llm_agent/config/: waypoints.yaml
ros2_ws/src/llm_agent/launch/: llm_agent.launch.py
ros2_ws/src/llm_agent/llm_agent/: app_neu.py  chat_cli.py  llm_agent_node.py  ui_app.py  ui_app.py.bak
ros2_ws/src/turtlebot3_full_bringup/: CMakeLists.txt
ros2_ws/src/turtlebot3_full_bringup/config/: init_nav2_params.yaml
ros2_ws/src/turtlebot3_full_bringup/launch/: full_bringup.launch.py
ros2_ws/src/turtlebot3_full_bringup/rviz/: rviz.rviz
ros2_ws/src/waypoint_patrol/: package.xml  setup.cfg  setup.py
ros2_ws/src/waypoint_patrol/launch/: patrol.launch.py
ros2_ws/src/waypoint_patrol/waypoint_patrol/: patrol_node.py
