<?xml version="1.0"?>
<package format="3">
  <name>llm_agent</name>
  <version>0.0.1</version>
  <description>LLM Agent exposing ROS tool services for robot state and nearest waypoint</description>
  <maintainer email="emmy.saifee@gmail.com">eeman</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_python</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
