<?xml version="1.0"?>
<package format="3">
  <name>waypoint_patrol</name>
  <version>0.0.1</version>
  <description>Waypoint patrol node using Nav2 NavigateToPose</description>
  <maintainer email="emmy.saifee@gmail.com">eeman</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>ament_index_python</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
